# GraphRush

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  DESIGN.md  LICENSE  Makefile  README.md  SECURITY_ANALYSIS.md
.github/workflows/: ci.yml  validation.yml
cpp-core/: CMakeLists.txt
cpp-core/include/graphrush/: Algorithms.hpp  BinaryGraphIO.hpp  CsrGraph.hpp  DeltaStepping.hpp  EdgeListParser.hpp  GraphLoader.hpp  GraphTypes.hpp  ParallelAlgorithms.hpp  ffi_bridge.hpp
cpp-core/src/: Algorithms.cpp  BinaryGraphIO.cpp  CsrGraph.cpp  DeltaStepping.cpp  EdgeListParser.cpp  GraphLoader.cpp  ParallelAlgorithms.cpp  ffi_bridge.cpp
cpp-core/tests/: test_csr_graph.cpp  test_delta_stepping.cpp  test_graph_io.cpp  test_parallel_algorithms.cpp  test_sequential_algorithms.cpp  test_weighted_graph_io.cpp
data/control/: cycle_6.edges  directed_dag.edges  line_6.edges  sssp_unit.edges  star_7.edges  two_components.edges  weighted_sssp.edges
data/security/: security_edges.csv
data/small/: example.csv  example.edges
docs/: VALIDATION.md  architecture.md  baseline_gapbs.md  benchmark_methodology.md  benchmarks.md  demo_phase6_1_security_core.md  demo_phase6_security.md  evaluation.md  ffi_boundary.md  parallel_frameworks.md  phase1_1.md  phase2_1.md  phase2_1_compliance.md  phase2_compliance.md  phase3_1.md  phase3_1_compliance.md  phase3_compliance.md  phase4_1_compliance.md  phase4_compliance.md  phase5.md  phase5_1.md  phase5_1_compliance.md  phase5_references.md  phase6_compliance.md  references.md  release_checklist.md  roadmap.md  security_analysis.md  security_core_bridge_design.md  security_phase.md  security_references.md  weighted_sssp_design.md
docs/archive/demos/: demo_phase4_small_graph.md  demo_phase6_1_security_core.md  demo_phase6_security.md
docs/archive/phases/: phase0.md  phase1.md  phase1_1.md  phase1_compliance.md  phase2.md  phase2_1.md  phase3.md  phase3_1.md  phase3_1_compliance.md  phase3_2.md  phase3_2_compliance.md  phase4.md  phase4_1.md  phase5.md  phase5_1.md  phase5_compliance.md  phase6.md  phase6_1.md  phase6_1_compliance.md
docs/archive/references/: delta_stepping_design.md  ffi_boundary_original.md  graph500_gap_chunkgraph.md  security_pack_design.md  security_phase.md
docs/screenshots/: README.md
reports/: final_report.md
rust-cli/: Cargo.toml  build.rs
rust-cli/src/: ffi.rs  main.rs
scripts/: benchmark_engine.py  compare_with_gapbs.md  generate_security_graph.py  phase3_parallel_benchmark.py  security_pack.py  validate.sh  verificar_local.sh
